--- a/templates/base.html
+++ b/templates/base.html
@@ -94,10 +94,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}" href="/dashboard">首页</a>
+                        <a class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}" href="/">首页</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'route_planner' %}active{% endif %}" href="/route">训练计划</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'about' %}active{% endif %}" href="/about">关于</a>
                     </li>
                 </ul>
                 {% if 'access_token' in session %}
@@ -119,7 +122,7 @@
     <!-- Footer -->
     <footer class="bg-light py-4 mt-5">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2025 OpenRunTraining. All rights reserved.</p>
+            <p class="mb-0">&copy; 2025 OpenRunTraining. All rights reserved. <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2025409935号-1</a></p>
         </div>
     </footer>
 
