--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}" href="/">首页</a>
+                        <a class="nav-link {% if request.endpoint == 'dashboard' %}active{% endif %}" href="/dashboard">首页</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'route_planner' %}active{% endif %}" href="/route">训练计划</a>
